--- a/tasks/present.yml
+++ b/tasks/present.yml
@@ -1,11 +1,18 @@
 ---
 
-# Install tasks
-# INFO larger roles should only use **include_tasks** here
-
-
-# INFO This task may be obsolete for your use-case
 - name: Gather package facts
   ansible.builtin.package_facts:
+
+- name: Setup VSCode repo
+  ansible.builtin.include_tasks:
+    file: "{{ ansible_os_family | lower }}_repo_setup.yml"
+
+- name: Install VSCode
+  become: true
+  when: "'code' not in ansible_facts.packages"
+  ansible.builtin.package:
+    update_cache: true
+    name: code
+    state: present
 
 ...
