--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,9 +1,8 @@
 ---
 
-# vars file for ansible-role-template
-
-
-# remove this placeholder
-ansible_role_template: "Default role name still in use."
+debian_dependencies:
+  - wget
+  - gpg
+  - apt-transport-https
 
 ...
