--- a/tasks/debian_repo_setup.yml
+++ b/tasks/debian_repo_setup.yml
@@ -32,6 +32,7 @@
     group: root
     mode: '0644'
 
+# TODO pull from here https://packages.microsoft.com/config/ubuntu/22.04/
 - name: Ensure VS Code APT repository is present
   become: true
   ansible.builtin.copy:
@@ -43,10 +44,11 @@
       URIs: https://packages.microsoft.com/repos/code
       Suites: stable
       Components: main
-      Architectures: amd64,arm64,armhf
+      Architectures: amd64
       Signed-By: /usr/share/keyrings/microsoft.gpg
     owner: root
     group: root
     mode: '0644'
+  diff: true
 
 ...
