update for ansible 13

--- a/tasks/debian_repo_setup.yml
+++ b/tasks/debian_repo_setup.yml
@@ -2,7 +2,7 @@
 
 - name: Ensure required packages are installed
   become: true
-  loop: "{{ debian_dependencies }}"
+  loop: "{{ vscode_debian_dependencies }}"
   when: item not in ansible_facts.packages
   ansible.builtin.apt:
     name: "{{ item }}"
